--- a/www/vis.html
+++ b/www/vis.html
@@ -26,6 +26,8 @@
       width: 100%;
       height: 50%;
       border: 0px solid lightgray;
+      
+      overflow: auto;
     }
   </style>
 </head>
